2024-11-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-tryit-links): new function.
	(ee-tryit-compact, ee-tryit-config): new variables.
	(ee-tryit-read-sexps, ee-tryit-tostring, ee-tryit-has)
	(ee-tryit-line, ee-tryit-if, ee-tryit-body, ee-tryit-progn)
	(ee-tryit-progns): new functions.

2024-11-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-windows-beginner-intro): added "sudo apt-get
	install -y imagemagick qpdf" (for creating animations with
	myqdraw).

2024-11-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-edrxmaxima): new function.
	(find-dot-emacs-links): recommend `edrxmaxima' instead of
	`maxima5470'.

	* eev-intro.el (find-windows-beginner-intro): explain that the
	"tar -C ~/ -xvzf /tmp/edrx-maxima.tgz" may overwrite some files.

2024-11-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-windows-beginner-intro): mention myqdraw.

2024-11-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new video:
	"2024butler" (subtitles only).

2024-10-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-code-c-d-add-pair): make `d' always be a string.

2024-10-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-maxima5470): added an autoload for
	maxima-mode.

2024-10-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-wget-elisp, find-wgeta-elisp)
	(find-wget-org): fixed some typos/bugs.

	* eev-elinks.el (ee-find-epackage-links0): added some sexps that
	use `package-get-descriptor'.

2024-10-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eaproposf, find-eaproposv): small changes.

2024-10-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-locate-library): added "&optional truename".
	(ee-eev-source-directory): use 'truename.

	* eev-tlinks.el (ee-dot-emacs-maxima5470): now it adds "~/MAXIMA/"
	to the load-path and ".mac" to the auto-mode-alist.
