@@ -1,3 +1,15 @@
+2024-12-02  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-tlinks.el (ee-tryit-body): added some entries for Lean.
+
+	* eev-videolinks.el (ee-1stclassvideos-info): new video, with
+	subtitles: "2024bashtest".
+
+2024-12-01  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-videolinks.el (ee-1stclassvideos-info): new video, with
+	subtitles: "2024trywithasexp".
+
 2024-11-29  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-tlinks.el (find-tryit-links): new function.
